--- a/3_HomeTask.ioc
+++ b/3_HomeTask.ioc
@@ -1,35 +1,38 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-2\#ChannelInjectedConversion=ADC_CHANNEL_TEMPSENSOR
-ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_9
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,NbrOfConversion,InjectedRank-2\#ChannelInjectedConversion,Channel-2\#ChannelInjectedConversion,SamplingTime-2\#ChannelInjectedConversion,InjectedOffset-2\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode,EOCSelection,DiscontinuousConvMode,InjectedRank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,ClockPrescaler
-ADC1.InjNumberOfConversion=2
-ADC1.InjectedConvMode=None
-ADC1.InjectedOffset-2\#ChannelInjectedConversion=0
-ADC1.InjectedOffset-4\#ChannelInjectedConversion=0
-ADC1.InjectedRank-2\#ChannelInjectedConversion=1
-ADC1.InjectedRank-4\#ChannelInjectedConversion=2
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,NbrOfConversion,InjNumberOfConversion,EOCSelection,DiscontinuousConvMode,ClockPrescaler
+ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-2\#ChannelInjectedConversion=ADC_SAMPLETIME_112CYCLES
-ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_112CYCLES
 ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM4
-Mcu.IPNb=5
+Mcu.IP1=ADC2
+Mcu.IP2=ADC3
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM4
+Mcu.IPNb=7
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA3
@@ -70,11 +73,12 @@ PD13.GPIO_Label=LED_ORANGE
 PD13.GPIO_PuPd=GPIO_PULLDOWN
 PD13.Locked=true
 PD13.Signal=S_TIM4_CH2
-PD14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD14.GPIO_Label=LED_RED
 PD14.GPIO_PuPd=GPIO_PULLDOWN
+PD14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD14.Locked=true
-PD14.Signal=S_TIM4_CH3
+PD14.Signal=GPIO_Output
 PD15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD15.GPIO_Label=LED_BLUE
 PD15.GPIO_PuPd=GPIO_PULLDOWN
@@ -108,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV16
@@ -135,28 +139,24 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
-SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.0=ADC3_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
-SH.ADCx_IN9.0=ADC1_IN9,IN9
+SH.ADCx_IN9.0=ADC2_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
-SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
-SH.S_TIM4_CH3.ConfNb=1
 SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
 SH.S_TIM4_CH4.ConfNb=1
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM4.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4
+TIM4.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation4 CH4
 TIM4.Period=0
 TIM4.Prescaler=16
 TIM4.Pulse-PWM\ Generation1\ CH1=0
 TIM4.Pulse-PWM\ Generation2\ CH2=0
-TIM4.Pulse-PWM\ Generation3\ CH3=0
 TIM4.Pulse-PWM\ Generation4\ CH4=0
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
